--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "quarto-pb-blog"
+title: "L3Lab"
 listing:
   contents: posts
   sort: "date desc"
@@ -8,5 +8,5 @@ listing:
   sort-ui: false
   filter-ui: false
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
