--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,35 @@
 ---
-title: "About"
-image: profile.jpg
+title: "Peter Baumgartner"
+image: portrait-peter.png
 about:
-  template: jolla
+  template: trestles
   links:
     - icon: twitter
       text: Twitter
-      href: https://twitter.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://linkedin.com
+      href: https://x.com/pbaumgartner
     - icon: github
       text: Github
-      href: https://github.com
-
+      href: https://github.com/petzi53
 ---
 
-About this blog
+I am a retired professor of Education Technology. As head of
+the [Department of Interactive Media and Educational
+Technologies](https://www.donau-uni.ac.at/en/university/faculties/education-arts-architecture/departments/continuing-education-research-educational-technologies.html) at
+the [University for Continuing Education Krems
+(UWK)](https://www.donau-uni.ac.at/en) (Austria), I researched how to
+apply technology in settings of Life Long Learning. 
+
+I had held positions as a professor at several universities in Austria
+and Germany (Klagenfurt, Münster, Innsbruck, Hagen) before I accepted
+the nomination to Krems. I published 25 books (10 monographs and 15
+edited volumes) and [over 200
+articles](https://portfolio.peter-baumgartner.net/publication/).
+
+With my retirement, I became a Life Long Learner myself. I am interested
+in studying workflows for Open Science research, focusing on note-taking
+apps like
+[Obsidian](https://obsidian.md/ "A note-taking app as extensible knowledge base"),
+[Hypothes.is](https://web.hypothes.is/ "Annotate anything online"),
+etc., and the [R programming
+language](https://www.r-project.org/ "Free software environment for statistical computing and graphics")
+for statistical computing and data science.
